feat: add modal window on card click

--- a/react-components/src/components/RickAndMortyCard/RickAndMortyCard.module.css
+++ b/react-components/src/components/RickAndMortyCard/RickAndMortyCard.module.css
@@ -10,7 +10,7 @@
   box-shadow: 2px 2px 2px 2px #808080a8;
   text-align: center;
   position: relative;
-  z-index: 1;
+  /* z-index: 1; */
 }
 
 .species_label {
